--- a/Assignment2/Assignment2.tex
+++ b/Assignment2/Assignment2.tex
@@ -150,8 +150,8 @@ https://github.com/https://github.com/sujal100/EE3900/blob/main/Assignment1/code
 \end{equation}
 Forming the matrix M,
 \begin{align}
-    M &= \myvec{
-    B - A & C - A\\
+    \vec{M} &= \myvec{
+    \vec{B} -  \vec{A} & \vec{C} - \vec{A}\\
     }^\top\\
     &= \myvec{
     -3 & -5 & -3\\
@@ -159,7 +159,7 @@ Forming the matrix M,
 \end{align}
 Using matrix transformation,
 \begin{align}
- M = \myvec{
+ \vec{M} = \myvec{
     -3 & -5 & -3\\
     3 & 5 & 3}
     \xleftrightarrow{\text{$R_2$}\rightarrow{\text{$R_2 + R_1$ }}}
@@ -168,7 +168,7 @@ Using matrix transformation,
  0 & 0 & 0}\
 \end{align}
 \begin{equation}
-   \implies rank(M) = 1 
+   \implies rank(\vec{M}) = 1 
 \end{equation}
 Thus $\vec{A}$, $\vec{B}$ and $\vec{C}$ are collinear.
 \begin{figure}[!h]
