--- a/Assignment2/Assignment2.tex
+++ b/Assignment2/Assignment2.tex
@@ -172,7 +172,8 @@ Using matrix transformation,
 \end{equation}
 Thus $\vec{A}$, $\vec{B}$ and $\vec{C}$ are collinear.
 \begin{figure}[!h]
-         \includegraphics[width=\columnwidth]{plot.png}
-         \caption{Plot of the line}
+\includegraphics[width=\columnwidth]{solutions/aug/2/14/Figures/plot.png}
+\caption{Plot of the line}
 \end{figure}
+
 \end{document}
