--- a/Assignment2/Assignment2.tex
+++ b/Assignment2/Assignment2.tex
@@ -170,10 +170,11 @@ Using matrix transformation,
 \begin{equation}
    \implies rank(\vec{M}) = 1 
 \end{equation}
-Thus $\vec{A}$, $\vec{B}$ and $\vec{C}$ are collinear.
+Thus, $\vec{A}$, $\vec{B}$ and $\vec{C}$ are collinear.
 \begin{figure}[!h]
-\includegraphics[width=\columnwidth]{solutions/aug/2/14/Figures/plot.png}
+\centering
+\includegraphics[width=\columnwidth]{plot.png}
 \caption{Plot of the line}
+\label{plt}
 \end{figure}
-
 \end{document}
