--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -145,8 +145,29 @@ https://github.com/https://github.com/sujal100/EE3900/blob/main/Assignment3/code
 \section{Problem}
 (construction Q-2.7) Construct a quadrilateral $MIST$ where $MI = 3.5, IS = 6.5, \angle M = 75 \degree , \angle I = 105 \degree$ and $ \angle S = 120 \degree$.
 \section{Solution}
+Here, we have two sides and three angle (i.e. we know all angles). So, we can use following lemma,
+\begin{lemma}
+\label{lemma a}
+\begin{align}
+\vec{S} =\vec{I} + b\vec{X} \text{ where } \vec{X} = \myvec{\cos (180\degree -\angle I)\\\sin (180\degree -\angle I)} \label{eq b}
+\end{align}
+\end{lemma}
+\begin{proof}
+here, $\vec{X}$ is unit vector in direction of line $IS$ and then multiply it with $b$ which is magnitude of line $IS$ and last adding $\vec{I}$.
+\end{proof}
+
+\begin{lemma}
+\label{lemma b}
+\begin{align}
+&\vec{T} = x\vec{Y} \text{ where } \vec{Y} = \myvec{\cos\alpha\\\sin \alpha}\text{ and } x \in R^{+} \label{eq c}\\
+&\text{Also,} \vec{T} = y\vec{Z}+\vec{S} \text{ where } \vec{Z} =  \myvec{\cos\theta\\\sin\theta} \text{ and }y \in R^{+} \label{eq d}
+\end{align}
+\end{lemma}
+\begin{proof}
+First, in equation \eqref{eq c} $\vec{Y}$ is unit vector in direction of line $MT$, and we need to find $x$ which is magnitude of line $MT$. Also, we use $\vec{S}$ to find $\vec{T}$ as in equation \eqref{eq d} $\vec{Z}$ is unit vector in direction of line $ST$. so, $\theta$ is angle between $ST$ and +x-axis
+\end{proof}
 The given information can be expressed as
-    \begin{align}
+\begin{align}
     &\angle M = 75\degree = \alpha \label{eq 1}
     \\
     &\angle I = 105\degree = \beta \label{eq 2}
@@ -156,46 +177,24 @@ The given information can be expressed as
     &\norm{\vec{M}-\vec{I}} = 3.5 = a \label{eq 4}
     \\
     &\norm{\vec{I}-\vec{S}} = 6.5 = b \label{eq 5}
-    \end{align}
-Let, 
-\begin{align}
-&\vec{M}=\myvec{0\\0},\vec{I}=\myvec{a\\0}
 \end{align}
-and first calculate Angle between $ST$ and +x-axis is
+So,Let  
+\begin{align}
+&\vec{M}=\myvec{0\\0},\vec{I}=\myvec{a\\0}.
+\end{align}
+and we have to find $\vec{S}$ and $\vec{T}$. Then, calculate $\theta$
 \begin{align}
 \theta &= 360\degree - (\beta + \gamma)\\
        &= 360\degree - (105\degree + 120\degree)\\
        &= 135\degree \label{eq a}
 \end{align}
-and we have to find $\vec{S}$ and $\vec{T}$.
-So, For $\vec{S}$, 
-\begin{lemma}
-\begin{align}
-\vec{S} =\vec{I} + b\vec{X} \text{ where } \vec{X} = \myvec{\cos (180\degree -\angle I)\\\sin (180\degree -\angle I)} \label{eq b}
-\end{align}
-\end{lemma}
-
-\begin{proof}
-here, $\vec{X}$ is unit vector in direction of line $IS$ and then multiply it with $b$ which is magnitude of line $IS$ and last adding $\vec{I}$.
-\end{proof}
-\begin{lemma}
-\begin{align}
-&\vec{T} = x\vec{Y} \text{ where } \vec{Y} = \myvec{\cos\alpha\\\sin \alpha}\text{ and } x \in R^{+} \label{eq c}\\
-&\text{Also,} \vec{T} = y\vec{Z}+\vec{S} \text{ where } \vec{Z} =  \myvec{\cos\theta\\\sin\theta} \text{ and }y \in R^{+} \label{eq d}
-\end{align}
-\end{lemma}
-\begin{proof}
-First, in equation \eqref{eq c} $\vec{Y}$ is unit vector in direction of line $MT$, and we need to find $x$ which is magnitude of line $MT$. Also, we use $\vec{S}$ to find $\vec{T}$ as in equation \eqref{eq d} $\vec{Z}$ is unit vector in direction of line $ST$
-\end{proof}
-Thus, 
-from  \eqref{eq 2} and \eqref{eq 5} in \eqref{eq b},
+So, For $\vec{S}$, we can use lemma \ref{lemma a}. Thus, from  \eqref{eq 2} and \eqref{eq 5} in \eqref{eq b},
 \begin{align}
 \vec{S} &=\myvec{3.5\\0} + 6.5\myvec{\cos 75\degree \\\sin 75\degree }\label{eq e}
 \\
 &=\myvec{5.18\\6.28}
 \end{align}
-Thus, 
-from \eqref{eq c},\eqref{eq d} and \eqref{eq e}, we get
+For $\vec{T}$, we can use lemma \ref{lemma b}. from \eqref{eq c},\eqref{eq d} and \eqref{eq e}, we get
 \begin{align}
 &x\vec{Y} = y\vec{Z}+\vec{S}\\
 &\myvec{\cos\alpha & -\cos\theta \\ \sin\alpha & -\sin\theta} \myvec{x \\ y} = \myvec{5.18\\6.28}
