--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -151,13 +151,9 @@ Here, we have two sides and three angle (i.e. we know all angles). So, we can us
 \begin{align}
 \vec{S} =\vec{I} + b\vec{X} \text{ where } \vec{X} = \myvec{\cos (180\degree -\angle I)\\\sin (180\degree -\angle I)} \label{eq b}
 \end{align}
-\end{lemma}
 \begin{proof}
 here, $\vec{X}$ is unit vector in direction of line $IS$ and then multiply it with $b$ which is magnitude of line $IS$ and last adding $\vec{I}$.
 \end{proof}
-
-\begin{lemma}
-\label{lemma b}
 \begin{align}
 &\vec{T} = x\vec{Y} \text{ where } \vec{Y} = \myvec{\cos\alpha\\\sin \alpha}\text{ and } x \in R^{+} \label{eq c}\\
 &\text{Also,} \vec{T} = y\vec{Z}+\vec{S} \text{ where } \vec{Z} =  \myvec{\cos\theta\\\sin\theta} \text{ and }y \in R^{+} \label{eq d}
@@ -194,7 +190,7 @@ So, For $\vec{S}$, we can use lemma \ref{lemma a}. Thus, from  \eqref{eq 2} and 
 \\
 &=\myvec{5.18\\6.28}
 \end{align}
-For $\vec{T}$, we can use lemma \ref{lemma b}. from \eqref{eq c},\eqref{eq d} and \eqref{eq e}, we get
+For $\vec{T}$, we can use lemma \ref{lemma a}. from \eqref{eq c},\eqref{eq d} and \eqref{eq e}, we get
 \begin{align}
 &x\vec{Y} = y\vec{Z}+\vec{S}\\
 &\myvec{\cos\alpha & -\cos\theta \\ \sin\alpha & -\sin\theta} \myvec{x \\ y} = \myvec{5.18\\6.28}
