--- a/Assignment5/Assignment5.tex
+++ b/Assignment5/Assignment5.tex
@@ -167,9 +167,13 @@ where,
 \vec{x} &= \myvec{x\\0}\\
 x^2 + 2 &= 0
 \end{align}
-
-Figure \ref{plot} show that the equation does not intersect the x-axis hence there are no real roots. 
-
+The discriminant is 
+\begin{align}
+D &= b^2 - 4ac
+\\
+&=-8 \quad < 0
+\end{align}
+Thus  the equation has no real roots as can be seen from Fig. \ref{plot}
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=\columnwidth]{plot.png}
