--- a/Assignment5/Assignment5.tex
+++ b/Assignment5/Assignment5.tex
@@ -165,15 +165,10 @@ The given equation can be represented as follows in the vector form
 where,
 \begin{align}
 \vec{x} &= \myvec{x\\0}\\
-x^2 + 2 &= 0
+x^2 + 2 &= 0\\
+\implies  x^2 &= -2
 \end{align}
-The discriminant is 
-\begin{align}
-D &= b^2 - 4ac
-\\
-&=-8 \quad < 0
-\end{align}
-Thus  the equation has no real roots as can be seen from Fig. \ref{plot}
+Thus, the equation has no real roots as can be seen from Fig. \ref{plot}
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=\columnwidth]{plot.png}
